Extend MainSimulation